--- a/README.me
+++ b/README.me
@@ -1,6 +1,6 @@
 #Assignment 1 - AngularJS app.
 
-Name: ... your name ...
+Name: Danny Carroll
 
 ###Overview.
 ...... A statement of the app concept and objectives (about 1/2 page) ........
