--- a/README.me
+++ b/README.me
@@ -3,7 +3,11 @@
 Name: Danny Carroll
 
 ###Overview.
-...... A statement of the app concept and objectives (about 1/2 page) ........
+Playlist Curator allows the user to create and stream Genre-based lists of music and share them with others. The source of the music is a service called Jamendo. Jamendo is a music website and an open community of independent artists and music lovers. It bills itself as "the world's largest digital service for free music. Jamendo has an API allowing developers to consume their freely available content. Playlist Curator lets the user select the genre of music they wish to based their playlist on. A selection of songs are returned for the user to peruse. These can be previewed and if the user likes the song, they can add it to the list. If the user changes their mind, it can then be removed. If the user has heard enough of the songs that are presented to them, then can load up some more and keep building the list.
+
+At any time, the user can visit the lists they have created and enjoy them. They can also share them with their friends on social media so others can enjoy the music. 
+
+Because the Jamendo music service is populated only by new, unsigned and unpublicized music creators, users are bound to discover some new talent using Playlist Curator. This is why the playlists’ starting point is the genre type.
 
 
  . . . . . List of user features (excluding user registration and authentication) . . . . 
